Update email address

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
         <div class="section">
             <h2>Contact Us</h2>
-            <p>If you have any questions about our privacy practices or this policy, please contact us at <a href="mailto:scenepeek@andreolas.slmail.me">scenepeek@andreolas.slmail.me</a>.</p>
+            <p>If you have any questions about our privacy practices or this policy, please contact us at <a href="mailto:support@scenepeek.app">support@scenepeek.app</a>.</p>
         </div>
     </div>
 
